# Spagbot_metac-bot

./: .gitignore  README.md  SCHEMAS.md  build_dashboard_parquet.py  forecasts.csv  pre-commit-config.yaml  pyproject.toml  pytest.ini  run_forecaster.py
.devcontainer/: devcontainer.json
.github/workflows/: calibration_refresh.yml  manual_test.yaml  resolver-ci-fast.yml  resolver-ci-nightly.yml  resolver-ci.yml  run_bot_on_metaculus_cup.yaml  run_bot_on_tournament.yaml  test_bot_cached.yaml  test_bot_fresh.yaml
Dashboard/: streamlit_app.py
Dashboard/data/: forecasts.parquet
Depreciated/: READMEold.md
calibration/: calibration_advice.json  calibration_weights.json
forecaster/: GTMC1.py  bayes_mc.py  cli.py  config.py  io_logs.py  providers.py  research.py  seen_guard.py  topic_classify.py
resolver/: EPIC_A_Strategy_and_Guardrails.md  README.md  resolver_project_plan.md
resolver/data/: shocks.csv
resolver/db/: __init__.py  duckdb_io.py
resolver/docs/: connectors_catalog.md  data_contracts.md  governance.md  operations.md  pipeline_overview.md  precedence.md  reliefweb_pdf.md  troubleshooting.md
resolver/ingestion/: README.md  _pdf_text.py  emdat_client.py  reliefweb_client.py  ucdp_stub.py  unhcr_client.py  unhcr_odp_client.py
resolver/reference/: avg_household_size.csv
resolver/tests/: README.md  test_duckdb_io.py  test_ingestion_smoke_all_connectors.py  test_no_conflict_closeout.py  test_precedence_multisource.py  test_registries.py  test_staging_schema_all.py
spagbot/: cli.py  io_logs.py
tests/: test_cf_fallback.py
(+1372 files in other folders)
