[tool.poetry]
name = "pythia"
version = "0.1.0"
description = "Unified resolver data pipeline and forecaster engine"
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
packages = [
    { include = "resolver" },
    { include = "forecaster" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.32.0"
asknews = "^0.11.2"
numpy = "^2.3.0"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
forecasting-tools = "^0.2.54"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
forecaster = "forecaster.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
